--- a/disha<html>.html
+++ b/disha<html>.html
@@ -15,6 +15,7 @@ body {
 <body>
 	<h1 align ="center" > DISHA CHEMISTRY CLASSES</h1>
 	<h2> Powered by allen</h2>
+          <h3>sponsered by resonance</h3>
 	<hr>
 	
 	<h2 align="center">For admission enquiry<a href="https://docs.google.com/forms/d/e/1FAIpQLSe7kns-CxL_B70pmveZ3ruGC5EW0bLQHHC-4QOPo2Qt6xxrQw/viewform?usp=sf_link"  target="_blank" > Click here</a></h2> 
